@@ -4,6 +4,10 @@ package org.jetbrains.intellij.build.impl
 import com.intellij.openapi.util.Pair
 import com.intellij.openapi.util.text.Strings
 import groovy.transform.CompileStatic
+import io.opentelemetry.api.trace.Span
+import io.opentelemetry.api.trace.SpanBuilder
+import io.opentelemetry.api.trace.StatusCode
+import io.opentelemetry.context.Scope
 import org.jetbrains.annotations.NotNull
 import org.jetbrains.annotations.Nullable
 import org.jetbrains.intellij.build.*
@@ -18,21 +22,25 @@ import org.jetbrains.jps.model.module.JpsModule
 import org.jetbrains.jps.model.module.JpsModuleSourceRoot
 import org.jetbrains.jps.util.JpsPathUtil
 
+import java.lang.reflect.UndeclaredThrowableException
 import java.nio.file.Files
 import java.nio.file.Path
-import java.nio.file.Paths
 import java.util.concurrent.ConcurrentLinkedQueue
 import java.util.function.BiFunction
+import java.util.function.Function
+import java.util.function.Predicate
 import java.util.function.Supplier
 import java.util.stream.Collectors
 
 @CompileStatic
 final class BuildContextImpl extends BuildContext {
+  final ApplicationInfoProperties applicationInfo
+
   private final JpsGlobal global
   private final CompilationContextImpl compilationContext
 
   // thread-safe - forkForParallelTask pass it to child context
-  private final ConcurrentLinkedQueue<Pair<Path, String>> distFiles
+  private final ConcurrentLinkedQueue<Map.Entry<Path, String>> distFiles
 
   @Override
   String getFullBuildNumber() {
@@ -51,7 +59,8 @@ final class BuildContextImpl extends BuildContext {
     MacDistributionCustomizer macDistributionCustomizer = productProperties.createMacCustomizer(projectHome)
 
     def compilationContext = CompilationContextImpl.create(communityHome, projectHome,
-                                                           createBuildOutputRootEvaluator(projectHome, productProperties), options)
+                                                           createBuildOutputRootEvaluator(projectHome, productProperties, options), options)
+
     return new BuildContextImpl(compilationContext, productProperties,
                                 windowsDistributionCustomizer, linuxDistributionCustomizer, macDistributionCustomizer,
                                 proprietaryBuildTools, new ConcurrentLinkedQueue<>())
@@ -62,7 +71,7 @@ final class BuildContextImpl extends BuildContext {
                            LinuxDistributionCustomizer linuxDistributionCustomizer,
                            MacDistributionCustomizer macDistributionCustomizer,
                            ProprietaryBuildTools proprietaryBuildTools,
-                           @NotNull ConcurrentLinkedQueue<Pair<Path, String>> distFiles) {
+                           @NotNull ConcurrentLinkedQueue<Map.Entry<Path, String>> distFiles) {
     this.compilationContext = compilationContext
     this.global = compilationContext.global
     this.productProperties = productProperties
@@ -72,17 +81,11 @@ final class BuildContextImpl extends BuildContext {
     this.linuxDistributionCustomizer = linuxDistributionCustomizer
     this.macDistributionCustomizer = macDistributionCustomizer
 
-    // Android Studio: modified by Change Idc07b110 / commit f20681e
-    bundledJreManager = new AndroidStudioBundledJreManager(this, compilationContext.paths.communityHome)
-
     buildNumber = options.buildNumber ?: readSnapshotBuildNumber(paths.communityHomeDir)
 
-    bootClassPathJarNames = List.of("util.jar", "bootstrap.jar")
-    dependenciesProperties = new DependenciesProperties(this)
-    applicationInfo = new ApplicationInfoProperties(project, productProperties, messages)
-/* Android Studio: don't patch ApplicationInfo.xml
-    applicationInfo = applicationInfo.patch(this)
-Android Studio: don't patch ApplicationInfo.xml */
+    xBootClassPathJarNames = productProperties.xBootClassPathJarNames
+    bootClassPathJarNames = List.of("util.jar")
+    applicationInfo = new ApplicationInfoProperties(project, productProperties, options, messages).patch(this)
     if (productProperties.productCode == null && applicationInfo.productCode != null) {
       productProperties.productCode = applicationInfo.productCode
     }
@@ -92,16 +95,37 @@ Android Studio: don't patch ApplicationInfo.xml */
     }
 
     options.buildStepsToSkip.addAll(productProperties.incompatibleBuildSteps)
-    messages.info("Build steps to be skipped: ${options.buildStepsToSkip.join(',')}")
+    if (!options.buildStepsToSkip.isEmpty()) {
+      messages.info("Build steps to be skipped: ${String.join(", ", options.buildStepsToSkip)}")
+    }
+  }
+
+  private BuildContextImpl(@NotNull BuildContextImpl parent,
+                           @NotNull BuildMessages messages,
+                           @NotNull ConcurrentLinkedQueue<Map.Entry<Path, String>> distFiles) {
+    compilationContext = parent.compilationContext.cloneForContext(messages)
+    this.distFiles = distFiles
+    global = compilationContext.global
+    productProperties = parent.productProperties
+    proprietaryBuildTools = parent.proprietaryBuildTools
+    windowsDistributionCustomizer = parent.windowsDistributionCustomizer
+    linuxDistributionCustomizer = parent.linuxDistributionCustomizer
+    macDistributionCustomizer = parent.macDistributionCustomizer
+
+    buildNumber = parent.buildNumber
+
+    xBootClassPathJarNames = parent.xBootClassPathJarNames
+    bootClassPathJarNames = parent.bootClassPathJarNames
+    applicationInfo = parent.applicationInfo
   }
 
   @Override
-  void addDistFile(@NotNull Pair<Path, String> file) {
+  void addDistFile(@NotNull Map.Entry<Path, String> file) {
     messages.debug("$file requested to be added to app resources")
     distFiles.add(file)
   }
 
-  @NotNull Collection<Pair<Path, String>> getDistFiles() {
+  @NotNull Collection<Map.Entry<Path, String>> getDistFiles() {
     return List.copyOf(distFiles)
   }
 
@@ -110,9 +134,10 @@ Android Studio: don't patch ApplicationInfo.xml */
   }
 
   private static BiFunction<JpsProject, BuildMessages, String> createBuildOutputRootEvaluator(String projectHome,
-                                                                                              ProductProperties productProperties) {
+                                                                                              ProductProperties productProperties,
+                                                                                              BuildOptions buildOptions) {
     return { JpsProject project, BuildMessages messages ->
-      ApplicationInfoProperties applicationInfo = new ApplicationInfoProperties(project, productProperties, messages)
+      ApplicationInfoProperties applicationInfo = new ApplicationInfoProperties(project, productProperties, buildOptions, messages)
       return "$projectHome/out/${productProperties.getOutputDirectoryName(applicationInfo)}"
     } as BiFunction<JpsProject, BuildMessages, String>
   }
@@ -128,11 +153,6 @@ Android Studio: don't patch ApplicationInfo.xml */
   }
 
   @Override
-  GradleRunner getGradle() {
-    compilationContext.gradle
-  }
-
-  @Override
   BuildOptions getOptions() {
     compilationContext.options
   }
@@ -143,8 +163,18 @@ Android Studio: don't patch ApplicationInfo.xml */
   }
 
   @Override
+  DependenciesProperties getDependenciesProperties() {
+    compilationContext.dependenciesProperties
+  }
+
+  @Override
   BuildPaths getPaths() {
     compilationContext.paths
+  }
+
+  @Override
+  BundledRuntime getBundledRuntime() {
+    compilationContext.bundledRuntime
   }
 
   @Override
@@ -182,8 +212,8 @@ Android Studio: don't patch ApplicationInfo.xml */
   }
 
   @Override
-  String getModuleOutputPath(JpsModule module) {
-    return compilationContext.getModuleOutputPath(module)
+  Path getModuleOutputDir(JpsModule module) {
+    return compilationContext.getModuleOutputDir(module)
   }
 
   @Override
@@ -212,8 +242,8 @@ Android Studio: don't patch ApplicationInfo.xml */
   }
 
   @Override
-  @Nullable Path findFileInModuleSources(String moduleName, String relativePath) {
-    for (Pair<Path, String> info : getSourceRootsWithPrefixes(findRequiredModule(moduleName)) ) {
+  @Nullable Path findFileInModuleSources(@NotNull String moduleName, @NotNull String relativePath) {
+    for (Pair<Path, String> info : getSourceRootsWithPrefixes(findRequiredModule(moduleName))) {
       if (relativePath.startsWith(info.second)) {
         Path result = info.first.resolve(Strings.trimStart(Strings.trimStart(relativePath, info.second), "/"))
         if (Files.exists(result)) {
@@ -224,35 +254,43 @@ Android Studio: don't patch ApplicationInfo.xml */
     return null
   }
 
-  private static @NotNull List<Pair<Path, String>> getSourceRootsWithPrefixes(JpsModule module) {
+  @NotNull
+  private static List<Pair<Path, String>> getSourceRootsWithPrefixes(@NotNull JpsModule module) {
     return module.sourceRoots
       .stream()
-      .filter({ JavaModuleSourceRootTypes.PRODUCTION.contains(it.rootType) })
-      .map({ JpsModuleSourceRoot moduleSourceRoot ->
-        String prefix
-        JpsElement properties = moduleSourceRoot.properties
-        if (properties instanceof JavaSourceRootProperties) {
-          prefix = ((JavaSourceRootProperties)properties).packagePrefix.replace(".", "/")
+      .filter(new Predicate<JpsModuleSourceRoot>() {
+        @Override
+        boolean test(JpsModuleSourceRoot root) {
+          return JavaModuleSourceRootTypes.PRODUCTION.contains(root.rootType)
         }
-        else {
-          prefix = ((JavaResourceRootProperties)properties).relativeOutputPath
+      })
+      .map(new Function<JpsModuleSourceRoot, Pair<Path, String>>() {
+        @Override
+        Pair<Path, String> apply(JpsModuleSourceRoot moduleSourceRoot) {
+          String prefix
+          JpsElement properties = moduleSourceRoot.properties
+          if (properties instanceof JavaSourceRootProperties) {
+            prefix = ((JavaSourceRootProperties)properties).packagePrefix.replace(".", "/")
+          }
+          else {
+            prefix = ((JavaResourceRootProperties)properties).relativeOutputPath
+          }
+          if (!prefix.endsWith("/")) {
+            prefix += "/"
+          }
+          return new Pair<>(Path.of(JpsPathUtil.urlToPath(moduleSourceRoot.getUrl())), Strings.trimStart(prefix, "/"))
         }
-        if (!prefix.endsWith("/")) {
-          prefix += "/"
-        }
-        return new Pair<>(Paths.get(JpsPathUtil.urlToPath(moduleSourceRoot.getUrl())), Strings.trimStart(prefix, "/"))
       })
       .collect(Collectors.toList())
   }
 
   @Override
-  void signFile(String path, Map<String, String> options) {
-    if (proprietaryBuildTools.signTool != null) {
-      proprietaryBuildTools.signTool.signFile(path, this, options)
-      messages.info("Signed $path")
+  void signFiles(@NotNull List<Path> files, Map<String, String> options) {
+    if (proprietaryBuildTools.signTool == null) {
+      messages.warning("Sign tool isn't defined, $files won't be signed")
     }
     else {
-      messages.warning("Sign tool isn't defined, $path won't be signed")
+      proprietaryBuildTools.signTool.signFiles(files, this, options)
     }
   }
 
@@ -274,26 +312,57 @@ Android Studio: don't patch ApplicationInfo.xml */
   }
 
   @Override
+  void executeStep(SpanBuilder spanBuilder, String stepId, Runnable step) {
+    if (options.buildStepsToSkip.contains(stepId)) {
+      spanBuilder.startSpan().addEvent("skip").end()
+      return
+    }
+
+    Span span = spanBuilder.startSpan()
+    Scope scope = span.makeCurrent()
+    // we cannot flush tracing after "throw e" as we have to end the current span before that
+    boolean success = false
+    try {
+      step.run()
+      success = true
+    }
+    catch (Throwable e) {
+      if (e instanceof UndeclaredThrowableException) {
+        e = e.cause
+      }
+
+      span.recordException(e)
+      span.setStatus(StatusCode.ERROR, e.message)
+      throw e
+    }
+    finally {
+      try {
+        scope.close()
+      }
+      finally {
+        span.end()
+      }
+
+      if (!success) {
+        // print all pending spans - after current span
+        TracerProviderManager.flush()
+      }
+    }
+  }
+
+  @Override
   boolean shouldBuildDistributions() {
-    options.targetOS.toLowerCase() != BuildOptions.OS_NONE
+    return options.targetOS.toLowerCase() != BuildOptions.OS_NONE
   }
 
   @Override
   boolean shouldBuildDistributionForOS(String os) {
-    shouldBuildDistributions() && options.targetOS.toLowerCase() in [BuildOptions.OS_ALL, os]
+    return shouldBuildDistributions() && options.targetOS.toLowerCase() in [BuildOptions.OS_ALL, os]
   }
 
   @Override
   BuildContext forkForParallelTask(String taskName) {
-    def ant = new AntBuilder(ant.project)
-    def messages = messages.forkForParallelTask(taskName)
-    def compilationContextCopy =
-      compilationContext.createCopy(ant, messages, options, createBuildOutputRootEvaluator(compilationContext.paths.projectHome, productProperties))
-    def copy = new BuildContextImpl(compilationContextCopy, productProperties,
-                                    windowsDistributionCustomizer, linuxDistributionCustomizer, macDistributionCustomizer,
-                                    proprietaryBuildTools, distFiles)
-    copy.paths.artifacts = paths.artifacts
-    return copy
+    return new BuildContextImpl(this, messages.forkForParallelTask(taskName), distFiles)
   }
 
   @Override
@@ -304,14 +373,15 @@ Android Studio: don't patch ApplicationInfo.xml */
     /**
      * FIXME compiled classes are assumed to be already fetched in the FIXME from {@link org.jetbrains.intellij.build.impl.CompilationContextImpl#prepareForBuild}, please change them together
      */
-    def options = new BuildOptions()
+    BuildOptions options = new BuildOptions()
     options.useCompiledClassesFromProjectOutput = true
-    def compilationContextCopy =
-      compilationContext.createCopy(ant, messages, options, createBuildOutputRootEvaluator(paths.projectHome, productProperties))
-    def copy = new BuildContextImpl(compilationContextCopy, productProperties,
-                                    windowsDistributionCustomizer, linuxDistributionCustomizer, macDistributionCustomizer,
-                                    proprietaryBuildTools, new ConcurrentLinkedQueue<>())
-    copy.paths.artifacts = paths.artifacts
+    CompilationContextImpl compilationContextCopy = compilationContext
+      .createCopy(ant, messages, options, createBuildOutputRootEvaluator(paths.projectHome, productProperties, options))
+    BuildContextImpl copy = new BuildContextImpl(compilationContextCopy, productProperties,
+                                                 windowsDistributionCustomizer, linuxDistributionCustomizer, macDistributionCustomizer,
+                                                 proprietaryBuildTools, new ConcurrentLinkedQueue<>())
+    copy.paths.artifactDir = paths.artifactDir.resolve(productProperties.productCode)
+    copy.paths.artifacts = paths.artifacts + "/" + productProperties.productCode
     copy.compilationContext.prepareForBuild()
     return copy
   }
@@ -332,13 +402,16 @@ Android Studio: don't patch ApplicationInfo.xml */
   }
 
   @Override
-  @SuppressWarnings('SpellCheckingInspection')
+  @SuppressWarnings("SpellCheckingInspection")
   @NotNull List<String> getAdditionalJvmArguments() {
     List<String> jvmArgs = new ArrayList<>()
 
     String classLoader = productProperties.classLoader
     if (classLoader != null) {
-      jvmArgs.add('-Djava.system.class.loader=' + classLoader)
+      jvmArgs.add("-Djava.system.class.loader=" + classLoader)
+      if (classLoader == "com.intellij.util.lang.PathClassLoader") {
+        jvmArgs.add("-Didea.strict.classpath=true")
+      }
     }
 
     jvmArgs.add('-Didea.vendor.name=' + applicationInfo.shortCompanyName)
@@ -360,32 +433,8 @@ Android Studio: don't patch ApplicationInfo.xml */
       jvmArgs.add('-Dsplash=true')
     }
 
-    if (options.bundledJreVersion >= 17) {
-      jvmArgs.addAll([
-        '--add-opens=java.base/java.lang=ALL-UNNAMED',
-        '--add-opens=java.base/java.text=ALL-UNNAMED',
-        '--add-opens=java.base/java.time=ALL-UNNAMED',
-        '--add-opens=java.base/java.util=ALL-UNNAMED',
-        '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
-        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-        '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
-        '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
-        '--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED',
-        '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
-        '--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
-        '--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED',
-        '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
-        '--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED',
-        '--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED',
-        '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
-        '--add-opens=java.desktop/sun.java2d=ALL-UNNAMED',
-        '--add-opens=java.desktop/sun.swing=ALL-UNNAMED',
-        '--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED',
-        '--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED',
-        '--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED',
-        '--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED',
-        '--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED'
-      ])
+    if (options.bundledRuntimeVersion >= 17) {
+      jvmArgs.addAll(OpenedPackages.getPackages(this))
     }
 
     return jvmArgs
